--- a/Dev94/readme
+++ b/Dev94/readme
@@ -1,1 +1,9 @@
 Sitio institucional llamado Dev94 para presentacion del portal de pesca. es a modo de prueba para practicar con servidor local y realizar sitio en WordPress
+
+para poder verlo: 
+
+1- copiar o descargar el codigo.
+2- Abrirlo con Visual Studio Code.
+3- Click derecho en Index.html y darle click a Open with live server. 
+
+
